------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.15	2007-?-?

	* Actions section added to File menu
	* Slovak translation added by Jozef Riha
	* French translation updated by Sylvain Cresto
	* Sharper image reduction toggle added to 'Scale Canvas'
	* Spacing for non-continuous tools is now configurable - right click the continuous mode toggle
	* LSS16 file format load/save added to support syslinux bootup splash screens
	* Clipboard alpha is now used as clipboard mask when pasting to image without alpha channel
	* "Filtered" drawing mode added
	* PNG compression level made configurable
	* BUGFIX - Negative values in Transform Colour and Resize Canvas dialogs are read correctly again
	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
	* Lanczos3 rescaling filter removed due to unfavourable results

3.10	2007-1-22

	* Gradient drawing mode added
	* Palette shifting feature added to Palette menu
	* Turkish translation added by Muhammet Kara, Tutku Dalmaz
	* Taiwanese Chinese translation added by Wei-Lun Chao
	* Image tiling mode added to "Resize Canvas"
	* Greyscale effect now respects masking
	* Gamma corrected greyscale effect added
	* Gaussian blur effect replaces the old blur effect
	* Unsharp mask effect added
	* More palette sort modes added
	* Controls for alpha/selection/mask A/B added to "Edit colour A & B"
	* RGB and HSV colour scales generation integrated into palette editor
	* New advanced dithering modes with many configuration options added to "Convert To Indexed" window
	* Optional gamma correction for image scaling, rotation, Gaussian blur and unsharp mask
	* Smudge tool can be configured to ignore opacity mode - right click the tool icon
	* Smudge tool respects tool opacity for RGB images
	* Channel deletion made easier to use
	* View window can now be placed under drawing window using the View menu or 'H' key