@@ -9,14 +9,20 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Actions section added to File menu
 	* Slovak translation added by Jozef Riha
 	* French translation updated by Sylvain Cresto
-	* Sharper image reduction toggle added to 'Scale Canvas'
+	* Sharper image reduction toggle added to "Scale Canvas"
 	* Spacing for non-continuous tools is now configurable - right click the continuous mode toggle
 	* LSS16 file format load/save added to support syslinux bootup splash screens
 	* Clipboard alpha is now used as clipboard mask when pasting to image without alpha channel
 	* "Filtered" drawing mode added
+	* "Resize Canvas" can now be used to offset an image, with or without changing its size
 	* PNG compression level made configurable
-	* BUGFIX - Negative values in Transform Colour and Resize Canvas dialogs are read correctly again
+	* TIFF files with alpha saved by Photoshop now load properly
+	* "Unassociate Alpha" operation added to Channels menu
+	* BUGFIX - Negative values in "Transform Colour" and "Resize Canvas" dialogs are read correctly again
 	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
+	* BUGFIX - Tool cursor now doesn't revert to default one after showing or hiding view window
+	* BUGFIX - Keyboard shortcut for swapping colours A & B now works in GTK+1
+	* BUGFIX - Clicking the palette grid in gradient editor now works properly in GTK+1
 	* Lanczos3 rescaling filter removed due to unfavourable results
 
 3.10	2007-1-22
